--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 TOKEN=whereiputmysecretdiscordbottoken
-MONGODB_CS=MONGODB_CS=mongodb+srv://xx:xx@example.xxxx.gcp.mongodb.net/test
+MONGODB_CS=mongodb+srv://xx:xx@example.xxxx.gcp.mongodb.net/test
+PREFIX=rei!
